# near-bridge

node/: Cargo.toml
pallets/template/: Cargo.toml  lightclient.py
pallets/template/fixtures/: expected_response.json  next.json
pallets/template/src/: crypto.rs  lib.rs  mock.rs  tests.rs
pallets/template/src/near/: block_header.rs  client.rs  errors.rs  hash.rs  merkle.rs  mod.rs  proof.rs  serialize.rs  signature.rs  types.rs  views.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
