[package]
name = "pallet-template"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }

log = { version = "0.4.14", default-features = false }
parking_lot = "0.12.1"

sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }

# Near deps
serde = { version = '1.0.130', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.67', default-features = false, features = [
	'alloc',
] }
sha2 = { version = "0.10", default-features = false }
derive_more = { version = "0.99.9", default-features = false, features = [
	"as_ref",
	"as_mut",
	"into",
] }
# near-crypto = { version = "0.16.0" }
bs58 = { version = "0.4", default-features = false }
borsh = { version = "0.9", default-features = false }
thiserror = { version = "*", default-features = false }
thiserror-no-std = { version = "*", default-features = false }
secp256k1 = { version = "0.27.0", default-features = false, features = [
	"recovery",
	"alloc",
	"rand",
] }
ed25519-dalek = { version = "1.0.1", default-features = false, features = [
	"u64_backend",
] }
once_cell = { version = "1.17.0", default-features = false }
base64 = { version = "0.21.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
rand = "0.7.3"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",

	"serde/std",
	"secp256k1/std",
	"ed25519-dalek/std",
	"once_cell/std",
	"serde_json/std",
	"sha2/std",
	"bs58/std",
	"borsh/std",
	"base64/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]

# [workspace]
# members = []
